[package]
name = "rust_sdl_learning"
version = "0.1.0"
authors = ["Thomas Richards <Deskbot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]
